--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animejs": "^2.2.0",
     "async": "^2.6.0",
     "express": "^4.16.3",
     "node-opcua": "^0.3.0",
